# BCML

./: Cargo.toml  activate-bcml.ps1  pyproject.toml  requirements.txt  setup.py  start-bcml.ps1
.github/workflows/: release-exe.yml
bcml/: __main__.py  _oneclick.py
bcml/assets/: package-lock.json
docs/: README.md
tauri-app/: README.md  index.html  package-lock.json  package.json
tauri-app/src/: App.css  App.tsx
tauri-app/src-tauri/: Cargo.toml
tauri-app/src-tauri/src/: lib.rs  main.rs  manager.rs
tauri-app/src/components/: AboutModal.tsx  BackupModal.tsx  ConfirmModal.tsx  DevToolsTab.tsx  DoneModal.tsx  ErrorModal.tsx  FirstRunWizard.tsx  ModsTab.tsx  ProfileModal.tsx  ProgressModal.tsx  SettingsTab.tsx
