[package]
name = "bcml-tauri"
version = "3.10.8"
description = "A mod manager for The Legend of Zelda: Breath of the Wild"
authors = ["NiceneNerd"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bcml_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
tauri = { version = "2.4", features = [] }
tauri-plugin-opener = "2.5"
tauri-plugin-dialog = "2.4"
tauri-plugin-fs = "2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
fs-err = "2.11"
dirs = "5.0"

